Move implementation back